# UniversityCoding

./: .gitignore  LICENSE  README.md
ImageProcessing/OTSU_py/: OTSU.py  README.md  main.py
ImageProcessing/Rotate_CPP/: CMakeLists.txt  README.md  main.cpp  resample.cpp  rotate.cpp  rotate.h
ImageProcessing/Rotate_CPP/include/: resample.h  rotate.h
ImageProcessing/Rotate_CPP/src/: main.cpp  resample.cpp  rotate.cpp
ImageProcessing/Rotate_CPP/test/: CMakeLists.txt  Eigen_test.cpp
ImageProcessing/grey-level-histogram/: README.md  main.py
Photogrammetry/: README.md
Photogrammetry/CCOFF_ImgMatch_cpp/: CMakeLists.txt  ImgMatch.cpp  ImgMatch.h  README.md  main.cpp
Photogrammetry/CurriculumDesign1/: CMakeLists.txt  README.md  widget.cpp  widget.h
Photogrammetry/Forstner_FeaturePoint_cpp/: CMakeLists.txt  main.cpp
Photogrammetry/Forstner_FeaturePoint_py/: README.md  forstner.m  forstner.py
Photogrammetry/RouteDesign/: CMakeLists.txt  README.md  RouteDesign.cpp  RouteDesign.h  main.cpp
Photogrammetry/forward_intersection/: README.md  forward_intersection.py  left_points.txt
Photogrammetry/relative_orientation/: README.md  relative_orientation.py
Photogrammetry/relative_orientation/points/: right_points.txt
algorithms/: ForceSearch.cc  ForceSearch.md  InsertionSort.cc  InsertionSort.md  Quick3waySort.cc  Quick3waySort.md  ReverseString.cc  SelectionSort.cc  SelectionSort.md
other/untitled/: README.md  test_mongo.py
